--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,9 +64,9 @@ services:
     restart: unless-stopped
     expose:
       - 9090
-#   depends_on:
-#     db:
-#       condition: service_healthy
+   depends_on:
+     db:
+       condition: service_healthy
     labels:
       org.label-schema.group: "monitoring"
 
@@ -77,12 +77,12 @@ services:
       - "DB_HOST=db"
       - "DB_USER=root"
       - "DB_PASS=homerSeven"
-    ports:
-      - "8001:8001"
+    expose:
+      - 8001
     restart: unless-stopped
-#    depends_on:
-#      db:
-#        condition: service_healthy
+    depends_on:
+      db:
+        condition: service_healthy
 
 
 
