--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   caddy:
    container_name: caddy
    image: stefanprodan/caddy
-   container_name: caddy
    ports:
      - "3000:3000"
-       #     - "9090:9090"
      - "9093:9093"
      - "9080:9080"
    volumes:
@@ -18,7 +16,6 @@ services:
    restart: unless-stopped
    labels:
      org.label-schema.group: "monitoring"
-
   db:
     image: postgres:11-alpine
     environment:
@@ -64,9 +61,9 @@ services:
     restart: unless-stopped
     expose:
       - 9090
-   depends_on:
-     db:
-       condition: service_healthy
+    #  depends_on:
+    #       db:
+    #   condition: service_healthy
     labels:
       org.label-schema.group: "monitoring"
 
@@ -80,9 +77,9 @@ services:
     expose:
       - 8001
     restart: unless-stopped
-    depends_on:
-      db:
-        condition: service_healthy
+    #    depends_on:
+    #  db:
+   #    condition: service_healthy
 
 
 
